--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+
     <style>
         table, th, td{
             border:1px solid black;
@@ -19,7 +20,7 @@
         #illustration{
             list-style:none;
             text-align: justify;
-            font: bold 1.5rem/1.2 arial, verdana, "Helvetica Meue",  monospace;
+            font: bold 2.5rem/1.2 arial, verdana, "Helvetica Meue",  monospace;
         }
         a:hover{
             color:tomato;
@@ -28,10 +29,11 @@
             color:powderblue;
         }
         tr{
-            font-size:1rem
+            font-size:2rem
         }
         .container{
             display:flex;
+            height: 690px;
         }
         .it{
             background-color: white;
@@ -48,6 +50,7 @@
         #c{
             flex-basis:20px;
         }
+
     </style>
     <div class="container">
         <div class="it" id="a"></div>
