--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             border:1px solid black;
             text-align:center;
             width:50%;
+            margine-left:100px;
         }
         #illustration{
             list-style:none;
@@ -62,6 +63,7 @@
                 :글자 몇가지를 금지하고 제시된 글자 맞추기를 목적으로 하는 게임<br>
                 (참여만 해도 상품을 드리며 가장 많은 글자를 맞춰 1등을 할 경우 키보드를 상품으로 드립니다)
             </div>
+            <br><br><br>
             <div class="it" id="table">
                 <table>
                     <tr>
